--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ uvicorn==0.23.1
 pydantic==2.1.1
 python-dotenv==1.0.0
 langchain-groq  
-langchain-core==0.0.308
+langchain-core
 langchain-community==0.0.21
 pandas==2.1.1
 tabulate==0.9.0
