--- a/.env
+++ b/.env
@@ -1,3 +1,1 @@
-GROQ_API_KEY=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
-
-# os.environ['GROQ_API_KEY'] = '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'
+GROQ_API_KEY=api_key
